added teaching section

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -34,7 +34,7 @@
     "TITLE": "Teaching - C++",
     "IMAGE_ALT": "Teaching Icon",
     "SUBTITLE": "Educational Resources",
-    "DESCRIPTION": "Tutorials and guides for learning.",
+    "DESCRIPTION": "C++ and C pdf's with IX, X, XI and XII support for C++ and Year 1 Semester I and II for C, basic C and data structures.",
     "OPEN_BUTTON": "Open",
     "TABS": {
       "BASICS": "Basics",
