--- a/public/assets/i18n/ro.json
+++ b/public/assets/i18n/ro.json
@@ -34,7 +34,7 @@
     "TITLE": "Predare - C++",
     "IMAGE_ALT": "Pictograma Predare",
     "SUBTITLE": "Resurse educationale",
-    "DESCRIPTION": "Tutoriale si ghiduri pentru invatare.",
+    "DESCRIPTION": "PDF-uri de C++ si C cu suport pentru clasele IX, X, XI si XII pentru C++ si Anul 1 Semestrul I si II pentru C, C de baza si structuri de date.",
     "OPEN_BUTTON": "Deschide",
     "TABS": {
       "BASICS": "Bazele",
